refactorization of Images service - part 3: make complete functions for the processed-images service
